--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <div class="w-[146px] h-[45px] text-[20px] font-['Sora'] rounded-[12px] bg-[#FFDC26] flex justify-center items-center"><a href="">Register</a></div>
             </div>
         </navbar>
-        <div class="banner w-[1320px] h-[749px] mx-auto relative bg-[url(/assets/cat-big.png)]">
+        <div class="banner w-[1320px] h-[749px] mx-auto relative">
+            <div class="absolute inset-0"><img src="assets/cat-big.png" alt=""></div>
             <div class="absolute top-[24px] left-0">
             <h1 class="text-[56px] font-['ADLaM_Display'] mb-[16px]">Pamper Your Pet, <br> Because They Deserve <br> the Bes</h1>
             <p class="text-[20px] text-[#585858] font-['Sora'] mb-[24px]">Discover a world of treats, toys, and essentials handpicked for <br> your furry friends. Shop now and make tails wag with joy!</p>
