--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <div>
             <div class="flex items-center gap-x-[12px] mb-[24px]">
                 <img class="w-[48px] h-[48px]" src="assets/logo-footer.png" alt="">
-                <h2 class="capitalize text-[26px] font-['Sora']">browse pets</h2>
+                <h2 class="capitalize text-[26px] font-['Sora']">browse <span class="text-[#FFDC26]">4</span> pets</h2>
             </div>
             <p class="text-[20px] text-[#111111b3] font-['Sora']">Discover a world of treats, toys, and <br> essentials handpicked for your furry <br> friends</p>
         </div>
